# alerts_bot

./: .gitignore  README.md  bot.py  db_funcs.py  gygyg.py  helpers.py  pyproject.toml  requirements.txt  standalone_funcs.py
src/: main.py
src/helpers/: helpers.py
