[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "python-dotenv>=1.0.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "liquidsnake", email = "bentsoft365@gmail.com"},
]
dependencies = [
    "python-telegram-bot>=20.2",
    "supabase>=1.0.3",
    "schedule>=1.2.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}
