[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "python-dotenv>=1.0.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "liquidsnake", email = "bentsoft365@gmail.com"},
]
dependencies = [
    "supabase>=1.0.3",
    "schedule>=1.2.0",
    "asyncio>=3.4.3",
    "python-telegram-bot==13.11",
]
requires-python = ">=3.9"
license = {text = "MIT"}
