[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "python-dotenv>=1.0.0",
]

[project]
name = "alerts_bot"
version = "0.1" 
description = ""
authors = [
    {name = "liquidsnake", email = "bentsoft365@gmail.com"},
]
dependencies = [
    "supabase>=1.0.3",
    "python-telegram-bot==13.11",
]
requires-python = ">=3.9"
license = {text = "MIT"}
